# community-guide

./: .gitignore  CONTRIBUTIING.md  LICENSE.md  README.md
events/: events_overview.md
live-coding-outputs/2025_04_12_API/: .env.example  README.md  hello.py  promptsculptor_proto.db  pyproject.toml  requirements.txt
live-coding-outputs/2025_04_12_API/app/: main.py
live-coding-outputs/2025_04_12_API/app/api/: router.py
live-coding-outputs/2025_04_12_API/app/api/endpoints/: prompt_mgmt.py  prompts.py  test_prompt_mgmt.py
live-coding-outputs/2025_04_12_API/app/core/: config.py  dependencies.py
live-coding-outputs/2025_04_12_API/app/db/: session.py
live-coding-outputs/2025_04_12_API/app/models/: log.py  prompt_mgmt.py
live-coding-outputs/2025_04_12_API/app/schemas/: prompt.py  prompt_mgmt.py
live-coding-outputs/2025_04_12_API/app/services/: llm_service.py  logging_service.py  prompt_mgmt_service.py
live-coding-outputs/2025_04_12_API/design_docs/: 01_product_requirements.md  02_Architecture_Guide.md  03_Database_Design.md  04_API_Design_Specification.md  05_Plan.md
live-coding-outputs/2025_04_12_API/docs/: concepts.md
live-coding-outputs/2025_04_12_API/prompts/: 01_prompt_engineer.md  02_product_manager.md  04_data_architect.md  05_senior_api_developer.md
live-coding-outputs/2025_04_12_API/tests/: conftest.py
live-coding-outputs/2025_04_12_API/tests/api/: test_prompt_endpoints.py
live-coding-outputs/2025_04_12_API/tests/models/: test_prompt_mgmt.py
live-coding-outputs/2025_04_12_API/tests/services/: test_llm_service.py  test_logging_service.py
(+152 files in other folders)
